[Java 17] Update src/main/java/com/example/java8/reflection/ReflectionUtils.java from Jira ticket JAVA-128
- Timestamp: 2024-12-05 17:01:07
- Source: Jira code review
- Ticket: JAVA-128
- File: src/main/java/com/example/java8/reflection/ReflectionUtils.java
- Branch: testing
- Type: Java 17 conversion